# mlearn

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt
scripts/: install-deps.sh
src/: CMakeLists.txt  mlearn.h
src/classifier/: bayes.cpp  bayes.h  classifier.h  knn.cpp  knn.h
src/clustering/: bic.cpp  bic.h  clustering.h  criterion.h  gmm.cpp  gmm.h  kmeans.cpp  kmeans.h  parameterset.cpp  parameterset.h
src/criterion/: bic.cpp  bic.h  criterion.h  icl.cpp  icl.h
src/data/: dataiterator.h  dataset.cpp  dataset.h  datatype.h  genome.cpp  genome.h  image.cpp  image.h
src/feature/: feature.h  ica.cpp  ica.h  identity.cpp  identity.h  lda.cpp  lda.h  pca.cpp  pca.h
src/math/: math_utils.cpp  math_utils.h  matrix.cpp  matrix.h  matrix_utils.cpp  matrix_utils.h  random.cpp
src/mlearn/classifier/: bayes.cpp  bayes.h  classifier.h  knn.cpp  knn.h
src/mlearn/clustering/: clustering.cpp  clustering.h  gmm.cpp  gmm.h  kmeans.cpp  kmeans.h  parameterset.cpp  parameterset.h
src/mlearn/criterion/: bic.cpp  bic.h  criterion.cpp  criterion.h  icl.cpp  icl.h
src/mlearn/cuda/: buffer.h  device.cpp  device.h
src/mlearn/data/: csviterator.cpp  csviterator.h  dataiterator.h  dataset.cpp  dataset.h  directory.cpp  directory.h  genome.h  genomeiterator.cpp  genomeiterator.h  image.cpp  image.h  imageiterator.cpp  imageiterator.h
src/mlearn/feature/: feature.h  ica.cpp  ica.h  identity.cpp  identity.h  lda.cpp  lda.h  pca.cpp  pca.h
src/mlearn/layer/: estimator.cpp  estimator.h  layer.cpp  layer.h  pipeline.cpp  pipeline.h  transformer.h
src/mlearn/math/: matrix.cpp  matrix.h  matrix_utils.cpp  matrix_utils.cu  matrix_utils.h  random.cpp  random.h
src/mlearn/model/: classificationmodel.cpp  classificationmodel.h  clusteringmodel.cpp  clusteringmodel.h
src/mlearn/preprocessing/: scaler.cpp  scaler.h
src/mlearn/util/: buffer.h  error.h  iodevice.cpp  iodevice.h  logger.cpp  logger.h  timer.cpp  timer.h
src/model/: classificationmodel.cpp  classificationmodel.h  clusteringmodel.cpp  clusteringmodel.h  model.cpp  model.h
src/util/: logger.cpp  logger.h  timer.cpp  timer.h
test/: CMakeLists.txt  Makefile  test_classification.cpp  test_clustering.cpp  test_data.cpp  test_genome.cpp  test_image.cpp  test_matrix.cpp
test/data/: iris.test  iris.train  iris.txt
